# c_for_fun

./: CMakeLists.txt  CMakePresets.json  README.md  main.c
.github/workflows/: c-cpp.yml
lib/: CMakeLists.txt
lib/include/: bit.h  circular_buffer.h  fixed_point_arithmetic.h  hello.h  memory_map.h
lib/src/: fixed_point_arithmetic.c  hello.c  memory_map.c
utils/: CMakeLists.txt
utils/include/: allocate.h  bit.h  circular_buffer.h  debouncing.h  hello.h  uart.h  wait.h
utils/src/: allocate.c  bit.c  circular_buffer.c  debouncing.c  hello.c  scheduler.c  uart.c  wait.c
